--- a/index.html
+++ b/index.html
@@ -1,12 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>维讯科技 - 新时代的云电脑</title>
-    <link type="text/css" rel="stylesheet" href="css/style.css"/>
-    <script type="text/javascript" src="js/script.js"></script>
-</head>
-<body>
-    <p>Hello World!</p>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>维讯科技 - 新时代的云电脑</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="keywords" content="维讯科技,维讯云,新时代维讯云" />
+        <meta name="description" content="跨时代的云电脑，想用云电脑就来维讯买白菜价高配置的云主机！" />
+        <link rel="stylesheet" type="text/css" href="css/app.css" />
+        <link rel="icon" href="../img/logo.ico">
+        <style>
+            .button{
+    font-size: 20px;
+    color: #596275;
+    box-shadow: 9px 9px 18px rgba(63, 185, 255, 0.1),
+    -9px -9px 18px rgba(255, 255, 255, 1);
+    border-radius: 3rem;
+	transition: box-shadow .2s ease-out;
+    background-color: #efeeee;
+    width: 230px;
+    height: 55px;
+    outline: none;
+    border:none;
+}
+.button:hover{
+    font-size: 19px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2),
+    -1px -1px 2px rgba(255, 255, 255, 0.8);
+    border-radius: 3rem;
+    transition: box-shadow .2s ease-out;
+    transition: font-size .2s ease-out;
+}
+        </style>
+    </head>
+    <body>
+    	<div id="header">
+    		<div class="header-con clearfix">
+	    		<div class=logo>
+	    			<a href="#"><img src="./img/logo.ico" class=ll></a>
+	    		</div>
+	    		<div class="nav">
+	    			<a href="#" class="current">首页<i></i></a>
+               			<a href="about.html">关于<i></i></a> 
+               			<a href="gm.html">购买<i></i></a>
+	    			<a href="wd.html">文档<i></i></a>
+	    			<a href="learnmore.html">登录/注册<i></i></a>
+	    		</div>
+    		</div>
+    	</div>
+
+        <div id="fullpage">
+            <div class="section " id="section1">
+                <div class="intro">
+                    <button class=button>介绍</button>
+                </div>
+            </div>
+            <div class="section " id="section2">
+                <div class="intro">
+                    <button class=button>介绍</button>
+                </div>
+            </div>
+            <div class="section " id="section4">
+                <div class="intro">
+                    <button class=button>介绍</button>
+                </div>
+            </div>
+            <div class="section " id="section5">
+                <div class="intro">
+                    <button class=button>介绍</button>
+                </div>
+            </div>
+            <div class="section " id="section6">
+                <div class="intro">
+                    <button class=button>介绍</button>
+                </div>
+            </div>
+            <div class="section " id="section8">
+                <div class="intro">
+                    <a href="./css/ry.html"><button class=button>人员介绍</button></a>
+
+                </div>
+            </div>            <div class="section " id="section9">
+                <div class="intro">
+                    <h1>友情链接</h1><br>
+                    <a href="http://lovepc-online.github.io/SysLite"><button class=button>SysLite</button></a>
+                    <a href="https://idc.极简云.中国"><button class=button>极简云</button></a>
+                    <a href="https://lovepcos.cn"><button class=button>lovepc‘s blog</button></a>
+                </div>
+            </div>
+        </div>
+
+        <script src="https://cdn.bootcdn.net/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script src="https://cdn.bootcdn.net/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
+        <script type="text/javascript" src="js/vender/jquery.slimscroll.min.js"></script>
+        <script type="text/javascript" src="js/vender/jquery.fullPage.min.js"></script>
+        <script type="text/javascript">
+            $('#fullpage').fullpage({
+                navigation: true,
+                navigationPosition: 'right'
+            });
+        </script>
+        
+        <div style="display:none;">
+        <script src="https://s95.cnzz.com/z_stat.php?id=1253671807&web_id=1253671807" language="JavaScript"></script>
+        </div> 
+    </body>    
 </html>
